[package]
name = "fksainetwork"
description = "A simple neural network."
version = "0.1.2"
edition = "2021"
authors = ["Felix Kanardy Sujono"]
repository = "https://github.com/Felix1G/fksainetwork"
license = "MIT"

exclude = [
    "networks",
    "target",
    ".idea"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bincode = "2.0.0-rc.3"
bincode_derive = "2.0.0-rc.3"